# discuss_protein_combain_AIremake

./: .gitignore  README.md  pyproject.toml  requirements.txt
protein_pipeline/: __init__.py  alignment.py  amino_acids.py  browser.py  cli.py  config.py  dali.py  fasta_utils.py  http_client.py  interface_composition.py  pisa.py  reporting.py  sorting.py  structure_surface.py  swissmodel.py  vast.py
